# test2

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_keys.sh  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  database.py  main.py
app/api/v1/: __init__.py  articles.py  auth.py  groups.py  info_categories.py  proposals.py  statistics.py  users.py
app/auth/: __init__.py  jwt.py  redis.py
app/models/: __init__.py  article.py  group.py  info_category.py  proposal.py  proposal_before.py  user.py
app/schemas/: __init__.py  article.py  group.py  info_category.py  proposal.py  proposal_before.py  user.py
docs/: database-design.md  system-specification.md
